Fix: Username login case-insensitive + TestSprite MCP integration

--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest",
     "testsprite": "node run-testsprite.js",
-    "testsprite:full": "npm run testsprite && npm run test:coverage"
+    "testsprite:full": "npm run testsprite && npm run test:coverage",
+    "mcp:test": "node testsprite.mcp.js"
+  },
+  "testsprite": {
+    "mcp": "./testsprite.mcp.js",
+    "server": "http://localhost:3000"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.15",
